// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with onClick 1`] = `
<img
  onClick={[Function]}
  style={
    Object {
      "cursor": "pointer",
      "display": "block",
      "float": "left",
      "margin": undefined,
    }
  }
/>
`;

exports[`renders correctly without onClick 1`] = `
<img
  onClick={null}
  style={
    Object {
      "display": "block",
      "float": "left",
      "margin": undefined,
    }
  }
/>
`;
